DTGB-499: Fixed spacing issue for related box.

--- a/components/41-organisms/related-box/_related-box.scss
+++ b/components/41-organisms/related-box/_related-box.scss
@@ -17,8 +17,11 @@
         width: span(4 of 8);
       }
 
-      > h3 {
+      @include desktop {
+        margin-bottom: 0;
+      }
 
+      > h3 {
         margin-bottom: .8rem;
 
         &:first-of-type {
